# python-shellenv

./: .gitignore  .installed.cfg  LICENSE  README.md  buildout.cfg  myscript.py  myscript.py~  pyproject.toml  setup.cfg  setup.cfg~  setup.py  shellenv.py
shellenv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/myproj/: __init__.py~  mymodule.py  myscript.py
src/myproj_package_rjaan.egg-info/: PKG-INFO  SOURCES.txt
src/shellenv/: __init__.py  __main__.py  cmdlineargs.py  shellenv.py  testrun.py
src/shellenv_module/: __init__.py  __main__.py  shellenv-run.py  shellenv.py
src/shellenv_module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/shellenv_module_rjaan.egg-info/: PKG-INFO  SOURCES.txt
src/shellenv_rjaan.egg-info/: PKG-INFO  SOURCES.txt
