[metadata]
name = shellenv
version = 1.5
license = PSF
author = Andrey Rzhavskov
author_email = rjaan@yandex.ru
description = print SHELL's enviroment variables on standard output   
long_description = file: README.md
long_description_content_type = text/markdown
url = https://localhost/python-shellenv.git
project_urls =
    Bug Tracker = https://localhost/.../issues
classifiers =
    Programming Language :: Python :: 3
    OSI Approved::Python Software Foundation License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

